made forward_model load_weights take the weights as parameters

--- a/tensorflow/2D deconvolution demo (pretrained).ipynb
+++ b/tensorflow/2D deconvolution demo (pretrained).ipynb
@@ -815,6 +815,7 @@
    ],
    "source": [
     "# load forward model weights (these are extracted from the measured PSFs using the SVD model)\n",
+    "# FIXME: specify paths, as per tensorflow/forward_model.load_weights\n",
     "H,weights,crop_indices=fm.load_weights() # H and weights are extracted from SVD of the PSFS\n",
     "                                            # rcL, rcU,ccL, ccU: crop indices used to crop the image to the correct size. "
    ]
