--- a/common/process_psf_for_svd.ipynb
+++ b/common/process_psf_for_svd.ipynb
@@ -299,9 +299,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cupy]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-cupy-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -313,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
