updated to focus on multiwiener, gave my directories

--- a/tensorflow/2D deconvolution demo (pretrained).ipynb
+++ b/tensorflow/2D deconvolution demo (pretrained).ipynb
@@ -816,8 +816,10 @@
    "source": [
     "# load forward model weights (these are extracted from the measured PSFs using the SVD model)\n",
     "# FIXME: specify paths, as per tensorflow/forward_model.load_weights\n",
-    "H,weights,crop_indices=fm.load_weights() # H and weights are extracted from SVD of the PSFS\n",
-    "                                            # rcL, rcU,ccL, ccU: crop indices used to crop the image to the correct size. "
+    "H,weights,crop_indices=fm.load_weights(h_path='../data/SVD_2_5um_PSF_5um_1_ds4_dsz1_comps_green_SubAvg.mat',\n",
+    "                                      weights_path='.../data/SVD_2_5um_PSF_5um_1_ds4_dsz1_weights_green_SubAvg.mat ') \n",
+    "# H and weights are extracted from SVD of the PSFS\n",
+    "# rcL, rcU,ccL, ccU: crop indices used to crop the image to the correct size. "
    ]
   },
   {
@@ -847,8 +849,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon1=model1.predict(sim.reshape((1,486, 648,1)))\n",
-    "recon2=model2.predict(sim.reshape((1,486, 648,1)))\n",
+    "# recon1=model1.predict(sim.reshape((1,486, 648,1)))\n",
+    "# recon2=model2.predict(sim.reshape((1,486, 648,1)))\n",
     "recon3=model3.predict(sim.reshape((1,486, 648,1)))\n"
    ]
   },
@@ -858,8 +860,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recon_titles = ['Unet', 'WienerNet', 'MultiWienerNet (Ours)']\n",
-    "recons_np = [recon1[0], recon2[0], recon3[0]]"
+    "# recon_titles = ['Unet', 'WienerNet', 'MultiWienerNet (Ours)']\n",
+    "# recons_np = [recon1[0], recon2[0], recon3[0]]\n",
+    "recon_titles = ['MultiWienerNet (Ours)']\n",
+    "recons_np = [recon3[0]]"
    ]
   },
   {
@@ -973,7 +977,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -987,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
