successfully performing SVD of PSFs and simulating images

--- a/common/My SVD.ipynb
+++ b/common/My SVD.ipynb
@@ -3,19 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7f732054",
+   "id": "bedf7178",
    "metadata": {},
    "outputs": [],
    "source": [
     "from csv_psfs import *\n",
     "import svd_model as svm\n",
     "\n",
-    "import forward_model as fm"
+    "import forward_model as fm\n",
+    "\n",
+    "import numpy as np\n",
+    "import scipy.io"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b5c80d41",
+   "id": "2b10daef",
    "metadata": {},
    "source": [
     "# My SVD\n",
@@ -25,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f5eec2d8",
+   "id": "cf95912c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2974e394",
+   "id": "1d545d7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2c7002f0",
+   "id": "3f4259ae",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "684e3982",
+   "id": "06a34510",
    "metadata": {},
    "outputs": [
     {
@@ -98,9 +101,96 @@
     }
    ],
    "source": [
-    "rank=4\n",
+    "rank=12\n",
     "comps, weights_interp=svm.calc_svd(psfs_reg,shifts,rank)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "73de2251",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize weights to have maximum sum through rank of 1\n",
+    "weights_norm = np.sum(weights_interp[weights_interp.shape[0]//2-1,weights_interp.shape[1]//2-1,:],0).max()\n",
+    "weights = weights_interp/weights_norm;\n",
+    "\n",
+    "#normalize by norm of all stack. Can also try normalizing by max of all stack or by norm of each slice\n",
+    "h=comps/np.linalg.norm(np.ravel(comps))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d0f7c20a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(486, 648, 12)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e9d909cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(486, 648, 12)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "59017c29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_dict = {\"array_out\": h}\n",
+    "scipy.io.savemat(\"../data/nV3_h.mat\", h_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "382ec738",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weights_dict = {\"array_out\": weights}\n",
+    "scipy.io.savemat(\"../data/nV3_weights.mat\", weights_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6987d782",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
