added mastermat approach for forward model, fixed spelling mistake

--- a/tensorflow/Simulation Playground.ipynb
+++ b/tensorflow/Simulation Playground.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a84214ec",
+   "id": "3b73d697",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b99e1aef",
+   "id": "7591b284",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a56dac00",
+   "id": "aa462846",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,113 +53,42 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f9e3ae7a",
+   "id": "c876502f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(909, 401),\n",
-       " (1153, 401),\n",
-       " (908, 154),\n",
-       " (1152, 157),\n",
-       " (906, -88),\n",
-       " (1146, -82),\n",
-       " (908, 648),\n",
-       " (1151, 644),\n",
-       " (411, 401),\n",
-       " (167, 401),\n",
-       " (-64, 400),\n",
-       " (412, 154),\n",
-       " (168, 157),\n",
-       " (414, -88),\n",
-       " (174, -82),\n",
-       " (412, 648),\n",
-       " (169, 644),\n",
-       " (660, 401),\n",
-       " (660, 648),\n",
-       " (660, 154),\n",
-       " (660, -90),\n",
-       " (660, -321)]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "point_coords"
+    "# point_coords"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fd294b07",
+   "id": "ba3bb264",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: [249, 1],\n",
-       " 2: [493, 1],\n",
-       " 3: [724, 0],\n",
-       " 4: [248, -246],\n",
-       " 5: [492, -243],\n",
-       " 6: [246, -488],\n",
-       " 7: [486, -482],\n",
-       " 8: [248, 248],\n",
-       " 9: [491, 244],\n",
-       " 10: [245, 488],\n",
-       " 11: [484, 482],\n",
-       " 12: [-249, 1],\n",
-       " 13: [-493, 1],\n",
-       " 14: [-724, 0],\n",
-       " 15: [-248, -246],\n",
-       " 16: [-492, -243],\n",
-       " 17: [-246, -488],\n",
-       " 18: [-486, -482],\n",
-       " 19: [-248, 248],\n",
-       " 20: [-491, 244],\n",
-       " 21: [-245, 488],\n",
-       " 22: [-484, 482],\n",
-       " 23: [0, 1],\n",
-       " 24: [0, 248],\n",
-       " 25: [0, 490],\n",
-       " 26: [0, 718],\n",
-       " 27: [0, -246],\n",
-       " 28: [0, -490],\n",
-       " 29: [0, -721]}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "shifts"
+    "# shifts"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f445b34a",
+   "id": "5d05ac47",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resized image in:              744273\n",
-      "Converted to grayscalse in:                1382\n",
-      "Simulated in:                 410\n"
+      "Resized image in:              842710\n",
+      "Converted to grayscalse in:                1052\n",
+      "Simulated in:                 381\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7113e87700>"
+       "<matplotlib.image.AxesImage at 0x7fabe16907c0>"
       ]
      },
      "execution_count": 6,
@@ -187,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5dc88752",
+   "id": "c376d1b8",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "384c9959",
+   "id": "e09f1c6f",
    "metadata": {},
    "outputs": [],
    "source": [
