first commit in a while, bunch of stuff changed

--- a/tensorflow/2D deconvolution demo (pretrained).ipynb
+++ b/tensorflow/2D deconvolution demo (pretrained).ipynb
@@ -614,7 +614,8 @@
    "source": [
     "#model1.load_weights('./saved_models/unet')\n",
     "#model2.load_weights('./saved_models/unetwiener')\n",
-    "model3.load_weights('./saved_models/multiwiener/model_weights')"
+    "model3.load_weights('./saved_models/multiwiener/model_weights')\n",
+    "# model3.load_weights(\"saved_models/multiwiener_nV3_probe/model_weights\")"
    ]
   },
   {
